--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -3,7 +3,7 @@ html(lang=`${language || 'en'}`)
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+    title= title
   body
     header
       nav(aria-labelledby="languageSwitcherHeading")
