--- a/content/style.css
+++ b/content/style.css
@@ -3,3 +3,10 @@ body > * {
   margin-left: auto;
   margin-right: auto;
 }
+
+[aria-current="true"] {
+  text-decoration: none;
+  outline: solid 2px black;
+  background: black;
+  color: white;
+}
