--- a/content/style.css
+++ b/content/style.css
@@ -1,7 +1,28 @@
-body > * {
-  max-width: 45ch;
+body {
+  margin: 0;
+  line-height: 1.5;
+  /* System font stack from https://css-tricks.com/snippets/css/system-font-stack/ */
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+
+main > * {
+  width: calc(100% - 3rem);
+  max-width: 40rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+main > pre {
+  max-width: 50rem;
+  font-size: 1.2em;
+}
+
+pre > code {
+  display: block;
+  padding: 0.5rem;
+  background-color: black;
+  color: white;
+  overflow: auto;
 }
 
 [aria-current="true"] {
