feat: add alternate links for translated pages

--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -5,6 +5,7 @@ html(lang=`${i18n.language || defaultLanguage}`)
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet",href="/style.css")
     title= title
+    include i18n/_head_links.pug
   body
     header
       = permalink
