--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -3,9 +3,13 @@ html(lang=`${i18n.language || defaultLanguage}`)
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet",href="/style.css")
     title= title
+    link(rel="stylesheet",href="/style.css")
+    
     include i18n/_head_links.pug
+
+    - const rssUrl = get(groups.byKeyByLanguage, ['feed', i18n.language, 'outputUrl'])
+    link(rel="alternate",type="application/rss+xml",href=rssUrl)
   body
     header
       = permalink
