refactor: move language switcher in its own partial

--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -12,25 +12,7 @@ html(lang=`${i18n.language || defaultLanguage}`)
     link(rel="alternate",type="application/rss+xml",href=rssUrl)
   body
     header
-      = permalink
-      nav(aria-labelledby="languageSwitcherHeading")
-        h2#languageSwitcherHeading(hidden="") Languages
-        each language in languages
-          - 
-            const translationUrl = get(groups.byKeyByLanguage, [i18n.key, language, 'outputUrl']);
-            let href;
-            if (translationUrl) { 
-              href = translationUrl
-            } else {
-              href = language === defaultLanguage ? '/' : `/${language}`  
-            }
-
-            currentAttr = i18n.language === language ? 'true' : null
-          | !{' '}
-          a(href=href, 
-            hreflang=language, 
-            aria-current=currentAttr)
-            = messages.languageSwitcher[language]
+      include i18n/_language_switcher.pug
         
     main
       != contents
