--- a/layouts/i18n/_language_switcher.pug
+++ b/layouts/i18n/_language_switcher.pug
@@ -1,4 +1,4 @@
-nav(aria-labelledby="languageSwitcherHeading")
+nav.language-switcher(aria-labelledby="languageSwitcherHeading")
   h2#languageSwitcherHeading(hidden="") Languages
   each language in languages
     - 
