--- a/content/style.css
+++ b/content/style.css
@@ -1,3 +1,8 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -83,9 +88,11 @@ pre > code {
 
 [aria-current="true"] {
   text-decoration: none;
-  outline: solid 2px black;
-  background: black;
-  color: white;
+  outline: solid 2px #111;
+  background: #111;
+  color: #fafafa;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 :focus {
@@ -153,3 +160,44 @@ pre > code {
 .link-reversed:hover {
   text-decoration: underline;
 }
+
+.archive {
+  list-style: none;
+  padding: 0;
+}
+
+.archive > * + * {
+  position: relative;
+  border-top: solid 1px transparent;
+}
+
+.archive > * + *::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1px;
+  width: 20%;
+  min-width: 2rem;
+  background: #111;
+}
+
+.archive-item {
+  position: relative;  
+  z-index: 0;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.archive-item a::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
