--- a/content/posts/index--fr.pug
+++ b/content/posts/index--fr.pug
@@ -4,9 +4,12 @@ title: Tous les posts
 block content
   h1= title
 
-  ul
+  ul.archive
     each post in (groups.byLanguageByType[i18n.language]['post'] || [])
-      li
-        a(href=post.outputUrl)
-          = post.title
+      li.archive-item
+        h2
+          a(href=post.outputUrl)
+            = post.title
+        time.margin-top--0(datetime=formatDate(post.date, 'yyyy-MM-dd', {locale: i18n.language}))
+          = formatDate(post.date, 'dd MMM yyyy', {locale: i18n.language})
 
