--- a/content/style.css
+++ b/content/style.css
@@ -199,6 +199,41 @@ pre > code {
   padding: 0;
 }
 
+h1[id],
+h2[id],
+h3[id],
+h4[id],
+h5[id],
+h6[id] {
+  position:relative;
+}
+
+h1 [href^="#"]::before,
+h2 [href^="#"]::before,
+h3 [href^="#"]::before,
+h4 [href^="#"]::before,
+h5 [href^="#"]::before,
+h6 [href^="#"]::before {
+  content: '#';
+  position: absolute;
+  right: 100%;
+  top: 50%;
+  transform:translateY(-50%);
+  padding: 0.375em;
+  color: #666;
+  font-weight: normal;
+  font-size: 0.8em;
+}
+
+h1 [href^="#"]:focus,
+h2 [href^="#"]:focus,
+h3 [href^="#"]:focus,
+h4 [href^="#"]:focus,
+h5 [href^="#"]:focus,
+h6 [href^="#"]:focus {
+  outline: none;
+}
+
 .archive > * + * {
   position: relative;
   border-top: solid 1px transparent;
