feat: write first article about internationalisation

--- a/layouts/i18n/_language_switcher.pug
+++ b/layouts/i18n/_language_switcher.pug
@@ -14,5 +14,6 @@ nav.language-switcher(aria-labelledby="languageSwitcherHeading")
     | !{' '}
     a.no-hreflang(href=href, 
       hreflang=language, 
+      lang=language
       aria-current=currentAttr)
       = messages.languageSwitcher[language]
