--- a/layouts/i18n/_language_switcher.pug
+++ b/layouts/i18n/_language_switcher.pug
@@ -1,5 +1,8 @@
+//- aria-labelledby prefered to aria-label because the later does not always
+//- get translated properly by browsers and apps
+//- https://adrianroselli.com/2019/11/aria-label-does-not-translate.html
 nav.language-switcher(aria-labelledby="languageSwitcherHeading")
-  h2#languageSwitcherHeading(hidden="") Languages
+  h2#languageSwitcherHeading(hidden="")= messages.languageSwitcherLabel[i18n.language]
   each language in languages
     - 
       const translationUrl = get(groups.byKeyByLanguage, [i18n.key, language, 'outputUrl']);
@@ -10,8 +13,8 @@ nav.language-switcher(aria-labelledby="languageSwitcherHeading")
         href = language === defaultLanguage ? '/' : `/${language}`  
       }
 
-      currentAttr = i18n.language === language ? 'true' : null
-    | !{' '}
+      currentAttr = i18n.language === language ? 'page' : null
+    = ' '
     a.no-hreflang(href=href, 
       hreflang=language, 
       lang=language
