--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -30,7 +30,7 @@ html(lang=`${i18n.language || defaultLanguage}`)
           = get(groups.byKeyByLanguage, ['posts/index', i18n.language, 'title'])
       include i18n/_language_switcher.pug
         
-    main#main.container.prose
+    main#main.prose
       block contents
         != contents
 
