--- a/layouts/i18n/_language_switcher.pug
+++ b/layouts/i18n/_language_switcher.pug
@@ -1,7 +1,7 @@
 //- aria-labelledby prefered to aria-label because the later does not always
 //- get translated properly by browsers and apps
 //- https://adrianroselli.com/2019/11/aria-label-does-not-translate.html
-nav.language-switcher(aria-labelledby="languageSwitcherHeading")
+nav.language-switcher(aria-labelledby="languageSwitcherHeading",role="navigation")
   h2#languageSwitcherHeading(hidden="")= messages.languageSwitcherLabel[i18n.language]
   each language in languages
     - 
