--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -17,8 +17,8 @@ html(lang=`${i18n.language || defaultLanguage}`)
   body
     a.skip-link(href="#main") Skip to content
     header.site-header.container
-      nav(aria-labelledby="site-navigation-label")
-        h2#site-navigation-label(hidden="") Site navigation
+      nav(aria-labelledby="site-navigation-label",role="navigation")
+        h2#site-navigation-label(hidden="") Site
         a.link-reversed.brand(
           href=get(groups.byKeyByLanguage, ['index', i18n.language, 'outputUrl'])
           )
@@ -34,7 +34,7 @@ html(lang=`${i18n.language || defaultLanguage}`)
       block contents
         != contents
 
-    footer.site-footer
+    footer.site-footer(role="contentinfo")
       | © #{new Date().getFullYear()} Romaric Pascal
       |  -  
       a(href="https://github.com/rhumaric", rel="me") Github
