--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -15,7 +15,8 @@ html(lang=`${i18n.language || defaultLanguage}`)
     - const rssUrl = get(groups.byKeyByLanguage, ['feed', i18n.language, 'outputUrl'])
     link(rel="alternate",type="application/rss+xml",href=rssUrl)
   body
-    a.skip-link(href="#main") Skip to content
+    a.skip-link(href="#main") 
+      = messages.skipLinkLabel[i18n.language]
     header.site-header.container
       nav(aria-labelledby="site-navigation-label",role="navigation")
         h2#site-navigation-label(hidden="") Site
