--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -9,6 +9,7 @@ html(lang=`${i18n.language || defaultLanguage}`)
         = ' - ' 
       = siteTitle
     link(rel="stylesheet",href="/style.css")
+    link(rel="stylesheet",href="/print.css",media="print")
     
     include i18n/_head_links.pug
 
