refactor: simplify default value for the href

--- a/layouts/i18n/_language_switcher.pug
+++ b/layouts/i18n/_language_switcher.pug
@@ -5,11 +5,9 @@ nav.language-switcher(aria-labelledby="languageSwitcherHeading",role="navigation
   h2#languageSwitcherHeading(hidden="")= messages.languageSwitcherLabel[i18n.language]
   each language in languages
     - 
-      const translationUrl = get(groups.byKeyByLanguage, [i18n.key, language, 'outputUrl']);
-      let href;
-      if (translationUrl) { 
-        href = translationUrl
-      } else {
+      
+      href = get(groups.byKeyByLanguage, [i18n.key, language, 'outputUrl']);
+      if (!href) { 
         href = language === defaultLanguage ? '/' : `/${language}`  
       }
 
