--- a/content/style.css
+++ b/content/style.css
@@ -56,10 +56,19 @@ a:hover {
   content: ' (' attr(hreflang) ')'
 }
 
-code {
+code,
+kbd {
   font-size: 1.2em;
   background-color: #eeeeee;
   outline: solid 2px #eeeeee;
+}
+
+kbd {
+  min-width: 1.25em;
+  line-height: 1.25;
+  padding: 0 0.125em;
+  text-align: center;
+  display: inline-block;
 }
 
 img {
@@ -138,6 +147,10 @@ ul, ol {
 
 .prose * + * {
   margin-top: 1.5rem;
+}
+
+.prose * + kbd {
+  margin-top: 0;
 }
 
 .prose br {
