--- a/content/style.css
+++ b/content/style.css
@@ -57,7 +57,10 @@ a:hover {
 }
 
 code,
-kbd {
+kbd,
+script,
+style {
+  font-family: monospace;
   font-size: 1.2em;
   background-color: #eeeeee;
   outline: solid 2px #eeeeee;
@@ -78,6 +81,17 @@ img {
 
 figcaption {
   text-align: center;
+  width: calc(100% - 2rem);
+  max-width: 20rem;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0.9;
+  font-size: 90%;
+  line-height: 1.4;
+  padding: 0 1rem;
+}
+
+* + figcaption {
   margin-top: 0.25rem;
 }
 
@@ -85,12 +99,23 @@ figure > img {
   display: block;
 }
 
-pre > code {
+fieldset {
+  border: 0;
+}
+
+legend {
+  font-weight: bold;
+}
+
+pre > code,
+main > script,
+main > style {
   display: block;
   padding: 0.5rem;
   background-color: #111;
   color: #fafafa;
   overflow: auto;
+  white-space: pre;
 }
 
 main {
@@ -109,11 +134,14 @@ main > * {
 main > pre,
 main > figure,
 main > img,
-main > blockquote {
+main > blockquote,
+main > style,
+main > script {
   max-width: 46rem;
 }
 
-blockquote {
+blockquote,
+.note {
   padding: 1rem;
   font-size: 1.125rem;
   border: solid 0.125rem;
@@ -141,7 +169,7 @@ ul, ol {
   padding-left: 1rem;
 }
 
-.prose *{
+.prose * {
   margin-bottom: 0;
 }
 
@@ -184,6 +212,14 @@ ul, ol {
 .prose li + li,
 .prose p + ul {
   margin-top: 0.5rem;
+}
+
+.prose img {
+  border: solid 1px #ddd;
+}
+
+.prose * + figcaption {
+  margin-top: 0.25rem;
 }
 
 :focus {
@@ -420,6 +456,12 @@ h6 [href^="#"]:focus {
   ) 50% no-repeat;
 }
 
+.interactive {
+  border: solid 2px;
+  padding: 1rem;
+  box-shadow: 0 0 0 2px white, 0 0 0 4px black ;
+}
+
 .avatar {
   float: right;
   shape-outside: circle(calc(50% + 1.5rem)) padding-box;
@@ -428,4 +470,13 @@ h6 [href^="#"]:focus {
   margin-left: 1.5rem;
   margin-bottom: 1.5rem;
   margin-top: 0.375rem;
+}
+
+/* Utility classes */
+.font-size--inherit {
+  font-size: inherit !important;
+}
+
+.no-border {
+  border: 0 !important;
 }
