--- a/content/style.css
+++ b/content/style.css
@@ -358,25 +358,22 @@ h6 [href^="#"]:focus {
   padding: 0;
 }
 
+.post-list > * {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .post-list > * + * {
-  position: relative;
   margin-top: 0;
   border-top: solid 0.0625rem transparent;
-  /* background-image: linear-gradient(#111,#111);
-  background-origin: border-box;
-  background-repeat: no-repeat;
-  background-size: 15% 0.0625rem;
-  background-size: max(20%, 2rem) 0.0625rem; */
-  border-image: repeating-linear-gradient(90deg, #111 15%, transparent 0) 1;
-  border-image: linear-gradient(90deg, #111 max(20%, 2rem), transparent 0) 1;
-  border-image-width: 1 0 0 0;
+  border-image-source: repeating-linear-gradient(90deg, #111 15%, transparent 0);
+  border-image-source: linear-gradient(90deg, #111 max(20%, 2rem), transparent 0);
+  border-image-slice: 1 0 0;
 }
 
 .post-list-item {
   position: relative;  
   z-index: 0;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .post-list-item a::before {
