--- a/content/style.css
+++ b/content/style.css
@@ -31,6 +31,10 @@ h1 {
   line-height: 1.3;
 }
 
+h3 {
+  font-size: 1.25rem;
+}
+
 h1 + *,
 h2 + *,
 h3 + *,
@@ -53,7 +57,9 @@ a:hover {
 }
 
 [hreflang]:not(.no-hreflang)::after {
-  content: ' (' attr(hreflang) ')'
+  content: ' ' attr(hreflang);
+  vertical-align: super;
+  font-size: 80%;
 }
 
 code,
@@ -157,6 +163,25 @@ blockquote p:nth-last-child(2)::after {
 
 blockquote cite {
   font-size: 1rem;
+  display: table;
+  margin-left: auto;
+  text-align: right;
+  border: solid 2px;
+  padding: 0.25rem 0.5rem;
+  margin-right: -1.5rem;
+  background: white;
+
+  position: relative;
+}
+
+blockquote cite::after {
+  content: '';
+  position: absolute;
+  border: solid 0.25rem;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  top: 100%;
+  right: 0;
 }
 
 blockquote a,
@@ -318,6 +343,10 @@ ul, ol {
   text-decoration: underline;
 }
 
+.lead {
+  font-size: 1.125rem;
+}
+
 h1[id],
 h2[id],
 h3[id],
@@ -473,6 +502,78 @@ h6 [href^="#"]:focus {
   margin-left: 1.5rem;
   margin-bottom: 1.5rem;
   margin-top: 0.375rem;
+}
+
+.project {
+  background: linear-gradient(#f0f0f0, #f0f0f0);
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat: repeat;
+    background-size: auto;
+  padding: 0.75rem;
+  background-repeat: no-repeat;
+  background-size: 100% calc(100% - 1rem);
+  background-position: bottom;
+}
+
+.project h3 {
+  background: #111;
+  color: #fafafa;
+  margin-left: -1.25rem;
+  margin-top: -0.5rem;
+  padding: 0.25rem 0.5rem 0.5rem;
+  display: table;
+
+  position: relative;
+}
+
+.project h3::after {
+  content: '';
+  position: absolute;
+  border: solid 0.25rem #111;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  top: 100%;
+  left: 0;
+}
+
+
+.project h3 + * {
+  margin-top: 1.5rem;
+}
+
+.project h3 a,
+.project h3 a:visited {
+  color: inherit;
+}
+
+.project h3 [hreflang]::after {
+  content: none;
+}
+
+.tech-list {
+  font-style: italic;
+  display: table;
+  margin-left: auto;
+  text-align: right;
+  margin-right: -1.25rem;
+  
+  padding: 0.25rem 0.5rem 0.5rem;
+  background: linear-gradient(#e0e0e0, #e0e0e0);
+  background-repeat: no-repeat;
+  background-size: 100% calc(100% - 0.25rem);
+
+  position: relative;
+}
+
+.tech-list::after {
+  content: '';
+  position: absolute;
+  border: solid 0.25rem #e0e0e0;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  bottom: -0.25rem; /* From bottom due to padding, shifted half-height to position correctly */
+  right: 0;
 }
 
 /* Utility classes */
