feat: style side-projects differently

--- a/content/style.css
+++ b/content/style.css
@@ -516,18 +516,22 @@ h6 [href^="#"]:focus {
   background-position: bottom;
 }
 
-.project h3 {
+.project h3,
+.project h4 {
   background: #111;
   color: #fafafa;
   margin-left: -1.25rem;
   margin-top: -0.5rem;
-  padding: 0.25rem 0.5rem 0.5rem;
+  padding: 0.25rem 0.75rem 0.5rem;
   display: table;
+  font-size: 1.125rem;
+  font-weight: normal;
 
   position: relative;
 }
 
-.project h3::after {
+.project h3::after,
+.project h4::after {
   content: '';
   position: absolute;
   border: solid 0.25rem #111;
@@ -538,30 +542,56 @@ h6 [href^="#"]:focus {
 }
 
 
-.project h3 + * {
+.project h3 + *,
+.project h4 + * {
   margin-top: 1.5rem;
 }
 
 .project h3 a,
-.project h3 a:visited {
+.project h3 a:visited,
+.project h4 a,
+.project h4 a:visited {
   color: inherit;
 }
 
-.project h3 a:focus {
+.project h3 a:focus,
+.project h4 a:focus {
   outline-offset: calc(0.5rem + 2px);
 }
 
-.project h3:focus-within {
+.project h3:focus-within,
+.project h4:focus-within {
   outline: solid 2px #111;
   outline-offset: 2px;
 } 
 
-.project h3:focus-within a:focus {
+.project h3:focus-within a:focus,
+.project h4:focus-within a:focus {
   outline: none;
 }
 
-.project h3 [hreflang]::after {
+.project h3 [hreflang]::after,
+.project h4 [hreflang]::after {
   content: none;
+}
+
+.project--side {
+  background-image: linear-gradient(#fafafa,#fafafa), linear-gradient(#111,#111);
+  background-size: calc(100% - 4px) calc(100% - 1rem - 4px), 100% calc(100% - 1rem);
+  background-position: bottom 2px left 2px, bottom left;
+  padding-bottom: 1rem;
+}
+
+.project--side h3{
+  background: #fafafa;
+  color: #111;
+  border: solid 2px;
+  font:inherit;
+  padding-bottom: 0.375rem;
+}
+
+.project--side h3 + * {
+  margin-top: 0.75rem;
 }
 
 .tech-list {
