--- a/layouts/site.pug
+++ b/layouts/site.pug
@@ -8,8 +8,8 @@ html(lang=`${i18n.language || defaultLanguage}`)
         = title
         = ' - ' 
       = siteTitle
-    link(rel="stylesheet",href="/style.css")
-    link(rel="stylesheet",href="/print.css",media="print")
+    link(rel="stylesheet",href='/style.css?version=' + Date.now())
+    link(rel="stylesheet",href='/print.css?version=' + Date.now(),media="print")
     
     include i18n/_head_links.pug
 
