--- a/content/style.css
+++ b/content/style.css
@@ -142,7 +142,8 @@ main > figure,
 main > img,
 main > blockquote,
 main > style,
-main > script {
+main > script,
+main > .column--expanded {
   max-width: 46rem;
 }
 
@@ -237,10 +238,6 @@ ul, ol {
 .prose li + li,
 .prose p + ul {
   margin-top: 0.5rem;
-}
-
-.prose img {
-  border: solid 1px #ddd;
 }
 
 .prose * + figcaption {
@@ -522,17 +519,20 @@ h6 [href^="#"]:focus {
     background-size: auto;
   padding: 0.75rem;
   background-repeat: no-repeat;
-  background-size: 100% calc(100% - 1rem);
+  background-size: 100% calc(100% - 1.5rem);
   background-position: bottom;
 }
 
-.project h3,
+  .project h3,
 .project h4 {
   background: #111;
   color: #fafafa;
   margin-left: -1.25rem;
   margin-top: -0.5rem;
-  padding: 0.25rem 0.75rem 0.5rem;
+  /* Irregular vertical padding to cater 
+     for the presence of a link in the heading 
+     for most projects */
+  padding: 0.3125rem 0.75rem 0.4375rem;
   display: table;
   font-size: 1.125rem;
   font-weight: normal;
@@ -585,9 +585,16 @@ h6 [href^="#"]:focus {
   content: none;
 }
 
+.project--not-linked h3,
+.project--not-linked h4 {
+  /* Shift padding to bottom to handle the lack of underline */
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .project--side {
   background-image: linear-gradient(#fafafa,#fafafa), linear-gradient(#111,#111);
-  background-size: calc(100% - 4px) calc(100% - 1rem - 4px), 100% calc(100% - 1rem);
+  background-size: calc(100% - 4px) calc(100% - 1.5rem - 4px), 100% calc(100% - 1.5rem);
   background-position: bottom 2px left 2px, bottom left;
   padding-bottom: 1rem;
 }
@@ -602,6 +609,49 @@ h6 [href^="#"]:focus {
 
 .project--side h3 + * {
   margin-top: 0.75rem;
+}
+
+.project--reversed {
+  background-image: linear-gradient(#111,#111), linear-gradient(#fafafa,#fafafa);
+  color: #fafafa;
+  background-size: calc(100% - 4px) calc(100% - 1.625rem - 4px), 100% calc(100% - 1.625rem);
+  background-position: bottom 2px left 2px, bottom left;
+  padding-bottom: 1rem;
+  /* Add a bit of padding due to the darkness of the color */
+  padding: 1rem;
+}
+
+.project--reversed h3 {
+  margin-left: -1.5rem;
+
+  background: #111;
+  color: inherit;
+  border: solid 0.125rem #fafafa;
+  font-size: 1.125rem;
+  /* Remove borders on the left and bottom
+     rather than setting them to transparent
+     to avoid 45deg. angles where they join */
+  border-left: 0;
+  border-bottom: 0;
+  /* Add them back as padding */
+  padding-bottom: calc(0.375rem + 0.125rem);
+  padding-left: calc(0.5rem + 0.125rem);
+  /* Draw an extra border at the bottom-right 
+     that'll join the side of the project */
+  background-image: linear-gradient(#fafafa,#fafafa);
+  background-repeat: no-repeat;
+  background-size: calc(100% - 0.5rem) 2px;
+  background-position: bottom right
+}
+
+.project--reversed a,
+.project--reversed a:visited {
+  color: inherit;
+  outline-color: #fafafa;
+}
+
+.project--ends-with-block {
+  padding-bottom: 1.75rem;
 }
 
 .tech-list {
@@ -629,9 +679,43 @@ h6 [href^="#"]:focus {
   right: 0;
 }
 
+.box {
+  border: solid 2px;
+  padding: 1rem;
+}
+
+.cta {
+  max-width: 26rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.with-cover-link {
+  position: relative;
+}
+
+.with-cover-link a::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.with-cover-link:hover {
+  outline: solid 2px;
+  outline-offset: 2px;
+}
+
 /* Utility classes */
 .font-size--inherit {
   font-size: inherit !important;
+}
+
+.text-align--center {
+  text-align: center !important;
 }
 
 .no-border {
